 - Dialog checks can be against factors (instead of 
   only numerical values)
 - Lockable doors;
 - dntMapEditor: Edit locked door parameters;
 - Surface texture indicating "possible-to-walk" positions on map;
 - Decreased the A* delay for Playable Character pathfinding;
 - Added a brief text alert when Playable Character A* fails 
   to find a path;
 - Zoom can be done also by mouse wheel;

BugFixes:
 - heightmap2dnt: Fixed a missing include;
 - bumpMapping: Changed shader to suppor not so recent 
                video cards (Geforce 6 series);
 - ./configure: Restricted SDL_ttf to >= 2.0.10;

================================================
|                Version 0.9                   |
|            Released: 2012-05-26              |
================================================
 - gui: rolBar can use position button to scroll text;
 - gui: button type: KEEP_PRESSING for buttons that will
        remain pressed until mouse is released, ignoring
		  if inner the button area;
 - Setting delta to sceneNode minY when lesser than 0;
 - script: new functions: callAnimation, setAnimation, playSound;
 - New script to controll cattle idle behaviour;
 - New script to controll beggars idle behaviour;
 - Added support to idtech4 (.md5*) models and animations;
 - 3D messages could be static on Y axis;
 - Lots of adjusts and fixes to the A* implementation;
 - Disabling vsync via OpenGL for better perfomance in OSX;
 - Verifying sight when NPC selecting target enemy and when 
   PC or NPC do an action;
 - Possibility to disable depth collision check on models where 
   the boundingBox check is enough;
 - Support for model's bump (normal) mapping;
 - Simplified number of skills to 12;
 - Removed the class Administration Student;
 - mapEditor: Support for skorpio OD tilesets;
 - New Models;
 - New Sound Effects and Music;

BugFixes:
 - sound: Fixed a possible double OpenAL stop when releasing an ogg_stream;